--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
 
     <div class="row">
-        <a class="btn btn-primary btn-lg btn-block" href="programs.html" role="button">Program Uniwersytetu</a>
-        <a class="btn btn-primary btn-lg btn-block" href="sports.html" role="button">Aktywności Sportowe</a>
+        <a class="btn btn-primary btn-lg btn-block" href="bicycle.html" role="button">Lista rowerów</a>
+
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
