--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="pl-PL">
   <head>
     <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="manifest" href="manifest.json">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <title>Responsywny interfejs użytkownika</title>
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
